THRIFT-5733 Building code with circular includes crashes Thrift compiler